# cmake_test_2

./: CMakeLists.txt
source/cmake_test_2/: main.cpp
